# bin-cpuflags-x86

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: config.toml  release.yml
src/: app.rs  binary.rs  cli.rs  decoder.rs  error.rs  help.in  io.rs  main.rs  print.rs  reader.rs  strings.rs  types.rs
src/binary/: strings.rs
src/cli/: tests.rs
src/decoder/: strings.rs
