[package]
name = "bin-cpuflags-x86"
version = "1.0.4"
edition = "2024"
rust-version = "1.85"
description = "A small CLI tool to detect CPU flags (instruction sets) of X86 binaries"
repository = "https://github.com/HanabishiRecca/bin-cpuflags-x86"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "hardware-support"]
keywords = ["avx", "cpu", "instruction-set", "sse"]
exclude = [".github", ".gitignore"]
publish = true

[profile.release]
panic = "abort"

[dependencies.iced-x86]
version = "1.21"
features = ["std", "decoder", "instr_info"]
default-features = false

[dependencies.object]
version = "0.37"
features = ["std", "read_core", "elf", "macho", "pe"]
default-features = false
